--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）案例场景/2. 常见案例/1. 函数应用.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）案例场景/2. 常见案例/1. 函数应用.md
@@ -170,129 +170,129 @@ d）组件的具体配置展示。
 
 d1）单函数组件【取手机号长度】：用于获取录入手机号的长度，用到的函数为length(String sourceStr)取字符串长度，传入手机号参数mobileNo即可，如图1-27、图1-28、图1-29、图1-30所示：
 
-![1-27](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_6.png)
+![image](https://user-images.githubusercontent.com/79617492/177716531-3038659e-2834-4739-a565-1c6b3d2cf0e5.png)
 
 ##### 图1-27 单函数组件
 
-![1-28](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_7.png)
+![image](https://user-images.githubusercontent.com/79617492/177716567-e5f5dd1f-3488-4005-b5c7-d73d36ea32ee.png)
 
 ##### 图1-28 填写数据
 
-![1-29](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_9.png)
+![image](https://user-images.githubusercontent.com/79617492/177716605-e987ec24-a934-470a-b091-e20c1395b4fa.png)
 
 ##### 图1-29 表格选择
 
-![1-30](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_8.png)
+![image](https://user-images.githubusercontent.com/79617492/177716634-48c041ce-4ea1-4e69-adf6-bc7fc0b64569.png)
 
 ##### 图1-30 参数选择
 
 d2）单函数组件【取手机号首位】：用于获取录入手机号首位的值，用到的函数为leftString(String sourceStr,int len)从左边取子字符串，需传入手机号参数mobileNo以及数值1，如图1-31、图1-32、图1-33所示：
 
-![1-31](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_10.png)
+![image](https://user-images.githubusercontent.com/79617492/177716668-712b06ca-8c1b-4137-b7c9-422e11361d60.png)
 
 ##### 图1-31 单函数组件
 
-![1-32](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_11.png)
+![image](https://user-images.githubusercontent.com/79617492/177717072-9ef7c2b1-27ec-48ba-aa9d-842794428bfb.png)
 
 ##### 图1-32 填写数据
 
-![1-33](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_12.png)
+![image](https://user-images.githubusercontent.com/79617492/177718344-328f4fa0-5bda-4779-836c-626ac289d1e4.png)
 
 ##### 图1-33 表格选择
 
 d3）互斥条件组件【判断手机号】：用于判断手机号录入是否正确，即手机号长度是否为11以及手机号首位是否为1，顺序流流转条件如图1-34、图1-35、图1-36、图1-37所示：
 
-![1-34](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_13.png)
+![image](https://user-images.githubusercontent.com/79617492/177718439-39dfe59a-84c3-4c7d-ba30-729f55e92759.png)
 
 ##### 图1-34 互斥条件
 
-![1-35](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_14.png)
+![image](https://user-images.githubusercontent.com/79617492/177718472-f0b54945-6dac-491a-97d0-e7e38fadcfef.png)
 
 ##### 图1-35 顺序流1
 
-![1-36](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_15.png)
+![image](https://user-images.githubusercontent.com/79617492/177718493-0e42aee0-37b6-4b4f-9b35-1646bef5f78c.png)
 
 ##### 图1-36 流转条件1
 
-![1-37](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_16.png)
+![image](https://user-images.githubusercontent.com/79617492/177718520-cce3e1f7-8577-4a06-a116-4aee8ed89aad.png)
 
 ##### 图1-37 顺序流2
 
-![1-38](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_17.png)
+![image](https://user-images.githubusercontent.com/79617492/177718545-ff4c80b9-23eb-43db-9e52-ff37e12bec90.png)
 
 ##### 图1-38 流转条件2
 
 d4）单函数组件【从左取3位】：用于获取录入手机号的前3位，用到的函数为leftString(String sourceStr,int len)从左边取子字符串，需传入手机号参数mobileNo以及数值3，与单函数组件【取手机号首位】 用到的函数相同，如图1-39、图1-40、图1-41所示：
 
-![1-39](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_18.png)
+![image](https://user-images.githubusercontent.com/79617492/177718577-3541a3e1-d33b-45f7-9bb4-3f9e392246ad.png)
 
 ##### 图1-39 单函数组件
 
-![1-40](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_19.png)
+![image](https://user-images.githubusercontent.com/79617492/177718675-0d8b8c68-093a-4e3e-bb2d-a401b6580443.png)
 
 ##### 图1-40 填写数据
 
-![1-41](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_20.png)
+![image](https://user-images.githubusercontent.com/79617492/177718712-7f6ca249-c95f-49b1-97bb-94fd04e6ff8c.png)
 
 ##### 图1-41 表格选择
 
 d5）单函数组件【从右取4位】：用于获取录入手机号的后4位，用到的函数为leftString(String sourceStr,int len)从左边取子字符串，需传入手机号参数mobileNo以及数值3，与单函数组件【取手机号首位】 用到的函数相同，如图1-42、图1-43、图1-44所示：
 
-![1-42](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_21.png)
+![image](https://user-images.githubusercontent.com/79617492/177718938-be219758-b2c3-4147-8d45-b9a9e9b15d84.png)
 
 ##### 图1-42 单函数组件
 
-![1-43](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_22.png)
+![image](https://user-images.githubusercontent.com/79617492/177725050-232b9381-d853-47ac-9dda-3f5c17d6fa88.png)
 
 ##### 图1-43 填写数据
 
-![1-44](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_23.png)
+![image](https://user-images.githubusercontent.com/79617492/177725078-ffe2e5f4-a984-46b8-a63d-447145e5b388.png)
 
 ##### 图1-44 表格选择
 
 d6）单函数组件【拼接手机号】：用于拼接手机号前3位、中间四位隐藏字符以及手机号后4位，用到的函数为concatStrs(String[] strs)多个字符串合并，需引用单函数组件【从左取3位】 和 单函数组件【从右取4位】 的函数执行结果，同时加上中间四位隐藏字符，如图1-46、图1-47、图1-48、图1-49所示：
 
-![1-45](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_24.png)
+![image](https://user-images.githubusercontent.com/79617492/177725099-2d77ee50-72db-4fb9-9c5c-b63e590585a4.png)
 
 ##### 图1-45 单函数组件
 
-![1-46](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_25.png)
+![image](https://user-images.githubusercontent.com/79617492/177725127-e65f93da-4cf0-4fa3-badd-97b30c3a53a2.png)
 
 ##### 图1-46 填写数据
 
-![1-47](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_33.png)
+![image](https://user-images.githubusercontent.com/79617492/177725160-67bb0a1e-867f-4318-8ba5-507f73eebc13.png)
 
 ##### 图1-47 表格选择
 
-![1-48](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_26.png)
+![image](https://user-images.githubusercontent.com/79617492/177725186-8af7d72b-d1ab-4494-ba27-f8aaf9793d2f.png)
 
 ##### 图1-48 参数选择：从左取3位
 
-![1-49](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_27.png)
+![image](https://user-images.githubusercontent.com/79617492/177725209-9ef72a66-1a53-4f62-a614-c6dbc62714bb.png)
 
 ##### 图1-49 参数选择：从右取3位
 
 d7）输出结果组件【输出结果】：用于将拼接所得的手机号输出，即完成手机号的脱敏显示，直接引用单函数组件【拼接手机号】 的函数执行结果，如图1-50、图1-51、图1-52所示：
 
-![1-50](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_30.png)
+![image](https://user-images.githubusercontent.com/79617492/177725228-83cbcc18-538b-478e-8d2a-23d7483a6ad7.png)
 
 ##### 图1-50 输出结果
 
-![1-51](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_31.png)
+![image](https://user-images.githubusercontent.com/79617492/177726278-4135852b-9d64-490d-9407-9753ac288d01.png)
 
 ##### 图1-51 填写数据
 
-![1-52](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_32.png)
+![image](https://user-images.githubusercontent.com/79617492/177726337-c9d0ec42-919b-4601-bf80-1d9c5fef9f94.png)
 
 ##### 图1-52 拼接手机号
 
 d8）输出结果组件【失败】：用于当录入的手机号错误时，直接输出失败信息，如图1-53、图1-54所示：
 
-![1-53](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_28.png)
+![image](https://user-images.githubusercontent.com/79617492/177726366-155474cc-b310-4942-96f0-5b67738935b2.png)
 
 ##### 图1-53 输出结果
 
-![1-54](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_29.png)
+![image](https://user-images.githubusercontent.com/79617492/177726390-c9a236a5-13b9-461b-af15-0e1e11a00db9.png)
 
 ##### 图1-54 填写数据
 
@@ -302,22 +302,22 @@ f）提交并发布接口。
 
 g）编辑测试用例，录入手机号，启用可视化日志，如图1-55、图1-56所示：
 
-![1-55](https://www.feisuanyz.com/fsimage/alcj-image/chengji/49.png)
+![image](https://user-images.githubusercontent.com/79617492/177726437-14147b82-0894-40cb-a4a8-86195a0ed40c.png)
 
 ##### 图1-55 编辑测试用例
 
-![1-56](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_34.png)
+![image](https://user-images.githubusercontent.com/79617492/177726477-c3a94402-7973-4748-b3ec-1c41cbb8c98e.png)
 
 ##### 图1-56 启用可视化日志
 
 h）执行测试用例，查看测试用例执行结果，可以看到输入的手机号已脱敏显示，如图1-57所示：
 
-![1-57](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_35.png)
+![image](https://user-images.githubusercontent.com/79617492/177726501-601c4bde-0fd0-4e00-b2dd-6c88741ccbcf.png)
 
 ##### 图1-57 查看执行结果
 
 i）查看可视化日志，如图1-58所示：
 
-![1-58](https://www.feisuanyz.com/fsimage/alcj-image/%E5%87%BD%E6%95%B0%E5%BA%94%E7%94%A8/string_36.png)
+![image](https://user-images.githubusercontent.com/79617492/177726542-1f80efa2-da17-4c35-a861-e7aa2cb0d992.png)
 
 ##### 图1-58 查看可视化日志
