--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）案例场景/2. 常见案例/5. 生成操作日志.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）案例场景/2. 常见案例/5. 生成操作日志.md
@@ -8,11 +8,11 @@
 
 生成操作日志功能效果：通过执行测试接口，调用生成操作日志子流程，即可实现在数据库中保存用户操作记录，如图5-1所示，本实例仅针对后端程序开发，若与前端页面进行联调，即可实现如图5-2所示的效果。
 
-![5-1](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/2_1.png)
+![image](https://user-images.githubusercontent.com/79617492/177927731-5f49c279-e487-4776-88ab-3c034172f26e.png)
 
 ##### 图5-1 用户操作日志表记录
 
-![5-2](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/2_2.png)
+![image](https://user-images.githubusercontent.com/79617492/177927753-5c01c362-74df-4416-851b-6797058cc8e9.png)
 
 ##### 图5-2 前端页面效果
 
@@ -33,7 +33,8 @@ CREATE TABLE `sy_log` (
   PRIMARY KEY (`auto_id`)
 ) ENGINE=InnoDB DEFAULT CHARSET=utf8 COMMENT='用户操作日志';
 ```
-![5-3](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/3_1.png)
+
+![image](https://user-images.githubusercontent.com/79617492/177927774-32c53548-5362-4252-8286-62fec3cff4f8.png)
 
 ##### 图5-3 用户操作日志表展示
 
@@ -45,7 +46,7 @@ CREATE TABLE `sy_log` (
 
 a）生成操作日志子流程
 
-![5-4](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/4_1.png)
+![image](https://user-images.githubusercontent.com/79617492/177927801-a89a93ed-728d-4d88-ba5b-17e8f3867f65.png)
 
 ##### 图5-4 子流程图
 
@@ -57,7 +58,7 @@ a2）在用户操作日志表中新增日志记录。
 
 b）测试接口
 
-![5-5](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/4_2.png)
+![image](https://user-images.githubusercontent.com/79617492/177927827-67428652-605c-4a62-bf2d-e3499f3aa5dd.png)
 
 ##### 图5-5 测试流程
 
@@ -79,11 +80,11 @@ a）创建实体模型
 
 ##### 说明：实体模型设计与用户操作日志表设计一致。
 
-![5-6](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_1.png)
+![image](https://user-images.githubusercontent.com/79617492/177927857-c27e7c8b-90a4-4de9-b65d-793a438904ea.png)
 
 ##### 图5-6 实体模型模块
 
-![5-7](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_2.png)
+![image](https://user-images.githubusercontent.com/79617492/177927870-ad06ab74-c286-4898-a324-53d2382fc22d.png)
 
 ##### 图5-7 新增实体模型
 
@@ -93,11 +94,11 @@ b1）填写子流程基本信息
 
 进入全自动开发平台“子流程管理”功能模块，新增一个子流程，填写子流程的基本信息，单击“下一步”。
 
-![5-8](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_3.png)
+![image](https://user-images.githubusercontent.com/79617492/177927901-7322131c-d51e-413e-9066-2e0fdb07cac3.png)
 
 ##### 图5-8 子流程管理模块
 
-![5-9](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_4.png)
+![image](https://user-images.githubusercontent.com/79617492/177927912-06312106-3dcb-44e3-b356-1dfce0cc0057.png)
 
 ##### 图5-9 填写子流程基本信息
 
@@ -105,7 +106,7 @@ b2）配置子流程入参列表
 
 此处需配置String类型的参数content作为日志内容、Integer类型的参数logType作为日志类型（数字表示：1增加2删除3修改4查询5导出6清除历史数据7备份数据库 8登录系统 9退出系统）、String类型的参数userId作为用户账户编号、String类型的参数fromIp作为来源IP，如图5-10所示：
 
-![5-10](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_5.png)
+![image](https://user-images.githubusercontent.com/79617492/177927930-aaf10b0c-fdc3-42a0-9d38-12210951385d.png)
 
 ##### 图5-10 配置入参列表
 
@@ -113,11 +114,11 @@ b3）子流程模型编辑
 
 通过拖拽左侧组件列表中所需的组件进行模型编辑（即流程图编辑），如图5-11、图5-12所示：
 
-![5-11](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_6.png)
+![image](https://user-images.githubusercontent.com/79617492/177927949-e38f6adc-951c-4954-8e7f-21937e0c6de4.png)
 
 ##### 图5-11 进入模型编辑
 
-![5-12](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_7.png)
+![image](https://user-images.githubusercontent.com/79617492/177927965-5f01d670-939f-4f21-8364-8ab0fd8f6f00.png)
 
 ##### 图5-12 组件列表展示
 
@@ -125,31 +126,31 @@ b4）子流程具体配置展示
 
 b4-1）赋值组件【赋值入参】：用于为实体模型SyLog赋值，故数据模型选择实体模型SyLog，如图5-14所示，具体赋值如图5-15所示。其中autoId（日志编号）的值通过调用函数getUuid()获取；logTime（操作时间）的值通过调用函数getCurrDateTime()获取，其余参数均引用对应的入口参数即可。
 
-![5-13](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_8.png)
+![image](https://user-images.githubusercontent.com/79617492/177928122-bad99a5a-5089-40ba-a35a-f1a3598f018b.png)
 
 ##### 图5-13 赋值组件【赋值入参】
 
-![5-14](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_9.png)
+![image](https://user-images.githubusercontent.com/79617492/177928154-be030307-2a42-4d7a-927e-f3cc3f52bea0.png)
 
 ##### 图5-14 选择数据模型
 
-![5-15](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_10.png)
+![image](https://user-images.githubusercontent.com/79617492/177928174-0d8acb99-cc07-4c6c-8176-7989f2f588de.png)
 
 ##### 图5-15 具体赋值
 
 b4-2）单SQL组件【新增操作日志记录】：用于新增用户操作日志表，需传入上一步构建的赋值入参，具体SQL内容如图5-16所示：
 
-##### 注意：若对于如何新增SQL语句不清晰，可参见[《SoFlu社区版快速入门教程第4.6节：如何新增SQL信息》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B.md#46-%E5%A6%82%E4%BD%95%E6%96%B0%E5%A2%9Esql%E4%BF%A1%E6%81%AF)
+##### 注意：若对于如何新增SQL语句不清晰，可参见[《SoFlu社区版快速入门教程第4.6节：如何新增SQL信息》](https://github.com/feisuanyz/SoFlu-adp/blob/main/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%85%A8%E8%87%AA%E5%8A%A8%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B/SoFlu%E7%A4%BE%E5%8C%BA%E7%89%88%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B.md#46-%E5%A6%82%E4%BD%95%E6%96%B0%E5%A2%9Esql%E4%BF%A1%E6%81%AF)。
 
-![5-16](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_11.png)
+![image](https://user-images.githubusercontent.com/79617492/177928391-4081c356-ccc3-42cb-bc8c-f50aee87e702.png)
 
 ##### 图5-16 单SQL组件【新增操作日志记录】
 
-![5-17](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_12.png)
+![image](https://user-images.githubusercontent.com/79617492/177930969-1e38b64e-188e-492a-9385-32ef39d53015.png)
 
 ##### 图5-17 组件配置
 
-![5-18](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_13.png)
+![image](https://user-images.githubusercontent.com/79617492/177930979-e0a7a9d0-5a2f-4718-94bd-d9faeb4812c0.png)
 
 ##### 图5-18 SQL内容
 
@@ -157,13 +158,13 @@ b5）保存并提交子流程
 
 b5-1）子流程配置完成后，单击页面上方“保存并退出”选项，如图5-19所示：
 
-![5-19](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_14.png)
+![image](https://user-images.githubusercontent.com/79617492/177930998-c09afd9d-46a2-4c18-af28-97850d80bff6.png)
 
 ##### 图5-19 保存并退出
 
 b5-2）提交子流程，如图5-20所示：
 
-![5-20](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_15.png)
+![image](https://user-images.githubusercontent.com/79617492/177931098-7045af6b-86c3-4872-8612-ad11c40f10e6.png)
 
 ##### 图5-20 提交子流程
 
@@ -173,23 +174,23 @@ c1）填写接口基本信息
 
 进入全自动开发平台“接口管理”功能模块，新增一个接口，填写接口的基本信息，如图5-21所示：
 
-![5-21](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_16.png)
+![image](https://user-images.githubusercontent.com/79617492/177931132-61ba910b-382c-4589-a119-46ae0e324cd9.png)
 
 ##### 图5-21 接口管理功能模块
 
-![5-22](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_17.png)
+![image](https://user-images.githubusercontent.com/79617492/177931147-949ce264-b488-40e3-8b48-98c5454785ba.png)
 
 ##### 图5-22 填写接口基本信息
 
 c2）配置接口入口参数
 
-此处需分别配置Body参数和头部参数作为接口入参，来新增用户操作日志表。其中Body参数配置String类型的参数content作为日志内容、Integer类型的参数logType作为日志类型（数字表示：1增加2删除3修改4查询5导出6清除历史数据7备份数据库 8登录系统 9退出系统），如图5-23所示；头部参数配置String类型的userId作为用户账户编号，如图5-24所示：
+此处需分别配置Body参数和头部参数作为接口入参，来新增用户操作日志表。其中Body参数配置String类型的参数content作为日志内容、Integer类型的参数logType作为日志类型（数字表示：1增加 2删除 3修改 4查询 5导出 6清除历史数据 7备份数据库 8登录系统 9退出系统），如图5-23所示；头部参数配置String类型的userId作为用户账户编号，如图5-24所示：
 
-![5-23](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_18.png)
+![image](https://user-images.githubusercontent.com/79617492/177931266-20be9a73-b24f-47f1-abee-5a1b0d2a1729.png)
 
 ##### 图5-23 配置Body参数
 
-![5-24](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_19.png)
+![image](https://user-images.githubusercontent.com/79617492/177931303-0eee1d00-263c-4c07-9381-49f6aa1bb605.png)
 
 ##### 图5-24 配置头部参数
 
@@ -201,100 +202,100 @@ c4）测试接口具体配置
 
 c4-1）请求响应参数管理组件【获取IP】：用于获取执行操作的当前IP地址，参数类型选择请求参数，执行方法选择getRemoteAddr()，如图5-26所示：
 
-![5-25](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_20.png)
+![image](https://user-images.githubusercontent.com/79617492/177931684-d576b910-5862-41c1-83cb-9161ed96f6a8.png)
 
 ##### 图5-25 请求响应参数管理组件【获取IP】
 
-![5-26](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_21.png)
+![image](https://user-images.githubusercontent.com/79617492/177931730-a48409dc-d1e4-445a-9d04-d27c75468a57.png)
 
 ##### 图5-26 组件配置
 
 c4-2）子流程组件【操作日志子流程】：用于调用生成操作日志子流程，子流程名称选择“生成操作日志”，即开头创建的子流程，如图5-28所示；入参映射中，fromIp（来源IP）引用请求响应参数管理组件【获取IP】的执行结果，其余参数均引用接口参数即可，如图5-29所示：
 
-![5-27](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_22.png)
+![image](https://user-images.githubusercontent.com/79617492/177931828-2f438c87-4e5a-48ed-9ea8-a5a31e01ed6d.png)
 
 ##### 图5-27 子流程组件【操作日志子流程】
 
-![5-28](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_23.png)
+![image](https://user-images.githubusercontent.com/79617492/177936478-0d77c128-c7e2-4f11-a63c-5c6277a2086b.png)
 
 ##### 图5-28 选择子流程
 
-![5-29](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_24.png)
+![image](https://user-images.githubusercontent.com/79617492/177936512-c6b52f4b-32da-4a70-b30f-ff6692050b94.png)
 
 ##### 图5-29 组件配置
 
 c4-3）单SQL组件【查询用户操作日志表】：用于查询用户操作日志表，具体SQL内容如图5-30所示：
 
-![5-30](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_25.png)
+![image](https://user-images.githubusercontent.com/79617492/177941177-e06977bb-15fb-496d-9c9b-2dfdc3fa671a.png)
 
 ##### 图5-30 单SQL组件【查询用户操作日志表】
 
-![5-31](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_26.png)
+![image](https://user-images.githubusercontent.com/79617492/177941190-587f7510-38d1-494e-ae03-a56ecc1e7b58.png)
 
 ##### 图5-31 SQL内容
 
-c4-4）输出结果组件：用于输出操作日志列表，引用单SQL组件【查询用户操作日志表】的执行结果即可，如图5-33所示：
+c4-4）输出结果组件：用于输出操作日志列表，引用单SQL组件【查询用户操作日志表】的执行结果即可，如图5-32所示：
 
-![5-33](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_27.png)
+![image](https://user-images.githubusercontent.com/79617492/177941215-f4fee33a-c233-4f60-9eb9-4dd3d5d24d79.png)
 
-##### 图5-33 输出结果组件
+##### 图5-32 输出结果组件
 
-![5-34](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_28.png)
+![image](https://user-images.githubusercontent.com/79617492/177941277-6fd726fb-f737-47e3-92bd-d1097c007483.png)
 
-##### 图5-34 组件配置
+##### 图5-33 组件配置
 
-c4-5）保存接口流程图，如图5-35所示：
+c4-5）保存接口流程图，如图5-34所示：
 
-![5-35](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_29.png)
+![image](https://user-images.githubusercontent.com/79617492/177941292-c5c42b5f-4e52-4a2a-977c-a14f535a605d.png)
 
-##### 图5-35 保存并退出
+##### 图5-34 保存并退出
 
-c4-6）提交并发布接口，如图5-36所示：
+c4-6）提交并发布接口，如图5-35所示：
 
-![5-36](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_30.png)
+![image](https://user-images.githubusercontent.com/79617492/177941794-799141ab-839e-41d9-97d7-43e1928feeeb.png)
 
-##### 图5-36 提交并发布接口
+##### 图5-35 提交并发布接口
 
 d）测试用例
 
-d1）对接口进行测试用例，检验接口实现的功能是否可以达到预期，如图5-37所示：
+d1）对接口进行测试用例，检验接口实现的功能是否可以达到预期，如图5-36所示：
 
-![5-37](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_31.png)
+![image](https://user-images.githubusercontent.com/79617492/177943778-112766e7-0e50-4ba2-a2dd-234afc071924.png)
 
-##### 图5-37 使用测试用例
+##### 图5-36 使用测试用例
 
-d2）编辑测试用例，如图5-38所示：
+d2）编辑测试用例，如图5-37所示：
 
-![5-38](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_32.png)
+![image](https://user-images.githubusercontent.com/79617492/177943859-23dac4ef-0d76-418e-ae97-374a08095b79.png)
 
-##### 图5-38 编辑测试用例
+##### 图5-37 编辑测试用例
 
 d3）单击“头部参数”页签，录入用户账户编号，如图5-39所示；单击“Body参数”页签，录入日志类型、日志内容，如图5-40所示，最后启用可视化日志（便于查看接口流程中的数据流转），单击执行即可：
 
-![5-39](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_33.png)
+![image](https://user-images.githubusercontent.com/79617492/177943878-5fbab0ed-caed-48db-b286-6da622bb11d4.png)
 
-##### 图5-39 录入头部参数
+##### 图5-38 录入头部参数
 
-![5-40](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_34.png)
+![image](https://user-images.githubusercontent.com/79617492/177943893-c4085f63-03a1-4032-a0b4-2e2dc3c129c1.png)
 
-##### 图5-40 录入Body参数
+##### 图5-39 录入Body参数
 
-d4）查看测试用例的响应内容以及用户操作日志表中的记录是否成功新增，如图5-41、5-42所示：
+d4）查看测试用例的响应内容以及用户操作日志表中的记录是否成功新增，如图5-40、5-41所示：
 
-![5-41](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_35.png)
+![image](https://user-images.githubusercontent.com/79617492/177943909-9ae9798d-4579-4c2e-941d-3a8c5759051c.png)
 
-##### 图5-41 测试用例响应结果
+##### 图5-40 测试用例响应结果
 
-![5-42](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_36.png)
+![image](https://user-images.githubusercontent.com/79617492/177943956-a0ec7307-51a6-4583-a011-b9ea6600db29.png)
 
-##### 图5-42 查看数据表记录
+##### 图5-41 查看数据表记录
 
 d5）若测试用例的响应内容出现错误或用户操作日志表中未新增记录，您可以通过双击查看可视化日志中各个组件的节点数据，对接口进行调试，如图5-42、图5-43所示：
 
-![5-42](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_37.png)
+![image](https://user-images.githubusercontent.com/79617492/177943982-fb978d51-0c76-485d-91c9-93aca3b29228.png)
 
 ##### 图5-42 查看可视化日志
 
-![5-43](https://www.feisuanyz.com/fsimage/alcj-image/systemlog/5_38.png)
+![image](https://user-images.githubusercontent.com/79617492/177943998-c497288e-defd-4e2e-a2b7-ef946793f274.png)
 
 ##### 图5-43 查看组件节点数据
